--- a/prog-assign-1/test/Makefile
+++ b/prog-assign-1/test/Makefile
@@ -1,3 +1,5 @@
+AFL_FUZZ=${CURDIR}/../afl-2.33b/afl-fuzz
+AFL_QEMU=${CURDIR}/../afl-2.33b/afl-qemu-trace
 
 all: bin-weak bin-strong
 
@@ -7,11 +9,16 @@ bin-weak: test.c
 bin-strong: test.c
 	gcc -O0 $< -o $@
 
+qemu:
+	(cd ${CURDIR}/../afl-2.33b/qemu_mode/qemu-2.3.0 && make)
+
 runafl-weak: bin-weak
-	${CURDIR}/../afl-2.33b/afl-fuzz -i ${CURDIR}/input -o ${CURDIR}/output-weak -Q -- ${CURDIR}/$< @@
+	${AFL_QEMU} -d op $< ./input/input.txt 2>$<.tc
+	${AFL_FUZZ} -i ${CURDIR}/input -o ${CURDIR}/output-weak -Q -- ${CURDIR}/$< @@
 
 runafl-strong: bin-strong
-	${CURDIR}/../afl-2.33b/afl-fuzz -i ${CURDIR}/input -o ${CURDIR}/output-strong -Q -- ${CURDIR}/$< @@
+	${AFL_QEMU} -d op $< ./input/input.txt 2>$<.tc
+	${AFL_FUZZ} -i ${CURDIR}/input -o ${CURDIR}/output-strong -Q -- ${CURDIR}/$< @@
 
 .phony: bin-weak bin-strong runafl-weak runafl-strong clean
 
